Closed Bug 371667 Opened 17 years ago Closed 17 years ago

The offline and online WHATWG events do not fire if the network connection goes down on Windows XP

Categories

(Core :: Networking, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: cajbir, Unassigned)

Details

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1.2) Gecko/20070219 Firefox/2.0.0.2
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a3pre) Gecko/20070226 Minefield/3.0a3pre

When the browser is in online mode it should fire the WHATWG 'offline' event if the network connection is broken (for example, the network cable is unplugged). When the network connection is restored the 'online' event should fire.

This does not happen on Windows XP due to the code checking to see if autodial is enabled in nsIOService.cpp. It does this by checking the preference network.autodial-helper.enabled which defaults to true. If it is true then the browser does not go offline when the network connection is broken.

On Windows XP it should also check to see if the relevant autodial settings in the operating system are enabled. If they are not then it should go offline and fire the events.

The test case from bug 336359 can be used to demonstrate the problem.

Reproducible: Always

Steps to Reproduce:
1. Visit the testcase fro bug 336359.
2. Disconnect the network cable.
3. Browser should fire 'offline' event and display 'Offline'.

Actual Results:  
Nothing happens. The event does not fire and 'Online' continues to display.

Expected Results:  
The browser should go offline and display 'Offline' in the testcase.
Summary: The offline and online WHATWG events do not fire if the network connections goes down on Windows XP → The offline and online WHATWG events do not fire if the network connection goes down on Windows XP
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #256405 - Flags: superreview?(cbiesinger)
Attachment #256405 - Flags: review?(cbiesinger)
Comment on attachment 256405 [details] [diff] [review]
Check Windows XP autodial registry settings to decide whether to go offline

don't think you need to call Init
Attachment #256405 - Flags: superreview?(cbiesinger)
Attachment #256405 - Flags: superreview+
Attachment #256405 - Flags: review?(cbiesinger)
Attachment #256405 - Flags: review+
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: