Bug 371667. When checking autodial status to see if we should put the browser offline, check whether a dial number is actually configured and allow the browser to go offline if no number is configured. r+sr=biesi, patch by Chris Double