netwerk/base/src/nsNativeConnectionHelper.h
@@ -51,6 +51,13 @@ public:
      * Return PR_TRUE if the connection should be re-attempted.
      */
     static PRBool OnConnectionFailed(const char* hostName);
+
+    /**
+     * IsAutoDialEnabled
+     *
+     * Return PR_TRUE if autodial is enabled in the operating system.
+     */   
+    static PRBool IsAutodialEnabled();
 };
 
 #endif // !nsNativeConnectionHelper_h__
